--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,10 @@
 {
-  "presets": ["env", "react", "stage-2"]
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  // "presets": ["stage-2", "@babel/preset-env", "@babel/preset-react"]
+  "plugins": ["transform-class-properties"]
+  // "plugins": [
+  //   "@babel/plugin-transform-runtime",
+  //   "@babel/proposal-class-properties",
+  //   "@babel/proposal-object-rest-spread"
+  // ]
 }
