--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/theoutlander/berniehosts#readme",
   "dependencies": {
+    "@babel/polyfill": "^7.4.3",
+    "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
     "cookie-session": "^1.3.3",
     "dotenv": "^7.0.0",
@@ -33,12 +35,19 @@
     "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.86.0",
     "slack": "^11.0.2",
     "spreadsheet-column": "^1.1.1",
     "superagent": "^5.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
     "babel-core": "^6.26.3",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
