--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "client-watch": "parcel watch ./src/index.html",
-    "server-watch": "nodemon ./src/server/server.js"
+    "server-watch": "nodemon ./src/server/server.js",
+    "server-watch-debug": "nodemon --inspect ./src/server/server.js"
   },
   "repository": {
     "type": "git",
