bug fixes, deployment related changes, config changes, etc.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run client-build && npm run server",
+    "clean": "rm -rf dist && rm -rf .cache && rm -rf node_modules",
+    "start": "NODE_ENV=production npm run client-build && npm run server",
     "build": "npm run client-build",
     "client-build": "parcel build ./src/index.html",
     "client-watch": "parcel watch ./src/index.html",
@@ -50,8 +51,10 @@
     "@babel/core": "^7.4.3",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^6.26.3",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
