--- a/.env.production
+++ b/.env.production
@@ -1,8 +1,8 @@
-SLACK_OAUTH=xoxp-594723647687-595539644401-596124684195-3b3fc5711db1200d0afcde0ee82c6619
-CLIENT_ID=594723647687.596199046978
-CLIENT_SECRET=d2f3033464dd6982a71a23e828fec31a
-SLACK_SIGNING_SECRET=d117daa75473f903592829f199c6b774
-SLACK_REDIRECT_URI=http://berniehosts.karnik.io/
-PORT=80
+SLACK_OAUTH=xoxp-594723647687-595539644401-613839998807-549fa6da3dd24a47e6d7972d44c859fd
+CLIENT_ID=594723647687.608973807748
+CLIENT_SECRET=ab9fb1d63a84aa9e0ea3a801df807e91
+SLACK_SIGNING_SECRET=26f95f3ca3342b1adab30a518c7331df
+SLACK_REDIRECT_URI=http://berniehosts.karnik.io/oauth
+PORT=3000
 GOOGLE_CLIENT_ID=773256386009-r1j06luqh462omu0eacvdbbgmoqplm3l.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=P-cejvyrVOPR5oAdpJkGKAIt
