--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "clean": "rm -rf dist && rm -rf .cache && rm -rf node_modules",
-    "start": "NODE_ENV=production npm run client-build && npm run server",
+    "start": "npm run client-build && npm run server",
+    "start-production": "NODE_ENV=production npm run client-build && npm run server",
     "build": "npm run client-build",
     "client-build": "parcel build ./src/index.html",
     "client-watch": "parcel watch ./src/index.html",
     "server": "node ./src/server/server.js",
-    "server-watch": "nodemon ./src/server/server.js",
+    "server-watch": "nodemon --watch ./src/server --watch .env.development ./src/server/server.js",
     "server-watch-debug": "nodemon --inspect ./src/server/server.js"
   },
   "repository": {
